Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25847

Tests with cmake + ctest + doctest_discover_tests don't show up

XMLWordPrintable

    • caf515929b08b9d0e432ba0819c61f532d2404bc (qt-creator/qt-creator/master)

      I have a CMake project where I'm using doctest for testing. It's not supported directly by Qt Creator, but I have the tests integrated with CTest with the following code:

      add_executable(my_test "main.cpp")
      target_link_libraries(my_test PRIVATE doctest::doctest)
      doctest_discover_tests(my_test)
      

      doctest_discover_tests works basically the same as the Catch2, they even link the documentation for Catch2.

      I don't know how Qt Creator detects CTest tests, but these aren't being detected.

      Here's a screenshot:

      If you need more info, please let me know!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cstenger Christian Stenger
            lordkalma Rui Oliveira
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes